# kernel

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml  kernel.json  runner.sh
conf/: limine.cfg
src/: main.rs  serial.rs
src/acpi/: fadt.rs  lai.rs  madt.rs  mod.rs  rsdp.rs  rsdt.rs
src/apic/: mod.rs
src/arch/: gdt.rs  idt.rs  mod.rs
src/display/: font.rs  mod.rs
src/io/: mmio.rs  mod.rs  port.rs  serial.rs
src/memory/: heap.rs
src/net/: e1000.rs
src/net/driver/: e1000.rs  mod.rs  rtl8139.rs
src/paging/: frame.rs  mapper.rs  mod.rs
src/pci/: bar.rs  mod.rs
src/pic/: mod.rs
src/sync/: spinlock.rs
src/utils/: mod.rs
